# GameEngine

./: CMakeLists.txt
assets/shaders/: sprite.frag  sprite.shader
include/Engine/: Engine.hpp
include/Engine/Assets/: Asset.hpp  AssetLoader.hpp  AssetLoaderContext.hpp  AssetManager.hpp  AssetRecord.hpp  TextureLoader.hpp
include/Engine/Communication/: BindableEvent.hpp  EngineEventDispatcher.hpp  EngineEventQueue.hpp
include/Engine/Components/: BoxCollider2D.hpp  CircleCollider2D.hpp  Collider2D.hpp  Component.hpp  SpriteComponent.hpp
include/Engine/Containers/: AsyncProcessQueue.hpp  HandleBuffer.hpp  ProcessQueue.hpp  RingBuffer.hpp
include/Engine/Core/: Application.hpp  Engine.hpp  EngineAPI.hpp  EngineContext.hpp  Entity.hpp  GameObject.hpp  Guid.hpp  Handle.hpp  IApplication.hpp  ILifecycle.hpp  Object.hpp  RunService.hpp  Services.hpp
include/Engine/Events/: BindableEvent.hpp  EngineEventDispatcher.hpp  EngineEventQueue.hpp  EventSubscription.hpp  IBindableEvent.hpp  ScriptConnection.hpp
include/Engine/Game/: Scene.hpp  Scene.tpp  SceneManager.hpp
include/Engine/GameObject/: Component.hpp  GameObject.hpp
include/Engine/Geometry/: Circle.hpp  IBoundingBox.hpp  Rect.hpp  Size.hpp
include/Engine/Graphics/: Color4.hpp
include/Engine/Input/: InputBuffer.hpp  InputManager.hpp
include/Engine/Logging/: LogMessage.hpp  Logger.hpp
include/Engine/Math/: PerlinNoise2D.hpp  Transform.hpp  Vector2.hpp
include/Engine/Platform/: PlatformWindow.hpp
include/Engine/Rendering/: Camera.hpp  Color4.hpp  Quad.hpp  RenderSystem.hpp  Renderable.hpp  Renderer.hpp  Texture.hpp  Viewport.hpp  Window.hpp
include/Engine/Resources/: Resource.hpp  ResourceLoader.hpp  ResourceLoaderContext.hpp  ResourceManager.hpp  ResourceRecord.hpp
include/Engine/Scene/: Scene.hpp  SceneManager.hpp
include/Engine/Types/: Color4.hpp  DimValue.hpp  DimVector.hpp  Guid.hpp  Size.hpp  Transform.hpp  Vector2.hpp  Viewport.hpp
include/Engine/UserInput/: InputSystem.hpp
include/Engine/Utility/: Guid.hpp  Random.hpp  ScopedTimer.hpp  Seed.hpp  Timer.hpp
include/Engine/World/: Camera.hpp  GameObject.hpp  Scene.hpp  SceneManager.hpp
include/Minesweeper/: Tile.hpp
include/Minesweeper/Boards/: Board.hpp  RandomBoard.hpp
include/Minesweeper/Core/: AdjacencyMask.hpp  BitGrid.hpp  Board.hpp  ConstTileWrapper.hpp  TileWrapper.hpp
include/Minesweeper/Game/: MinesweeperApp.hpp
include/Minesweeper/Generators/: BoardGenerator.hpp  NoGuessGenerator.hpp  RandomGenerator.hpp
include/Minesweeper/Objects/: BoardObject.hpp  Counter.hpp  SmileButton.hpp  Tile.hpp  TileObject.hpp
include/Minesweeper/Parsing/: ByteSerializer.hpp
include/Minesweeper/Scenes/: EasyBoard.hpp  GameScene.hpp  IntermediateBoard.hpp
include/Minesweeper/Solver/: Move.hpp  Rule.hpp  Solver.hpp  SolverState.hpp
src/: main.cpp
src/Engine/: Engine.cpp
src/Engine/Assets/: Asset.cpp  AssetLoader.tpp  AssetManager.cpp  AssetManager.tpp  AssetRecord.tpp  TextureLoader.cpp
src/Engine/Communication/: EngineEventDispatcher.cpp  EngineEventQueue.cpp  ScriptConnection.cpp
src/Engine/Components/: BoxCollider2D.cpp  CircleCollider2D.cpp  Collider2D.cpp  Collider2D.tpp  Component.cpp  SpriteComponent.cpp  SpriteComponent.tpp
src/Engine/Containers/: AsyncProcessQueue.cpp  HandleBuffer.tpp  ProcessQueue.cpp  RingBuffer.tpp
src/Engine/Core/: Application.cpp  Engine.cpp  EngineAPI.cpp  EngineAPI.tpp  EngineContext.cpp  Entity.cpp  GameObject.cpp  GameObject.tpp  Guid.cpp  Handle.tpp  Object.cpp  RunService.cpp  Services.cpp
src/Engine/Events/: BindableEvent.tpp  EngineEventDispatcher.cpp  EngineEventDispatcher.tpp  EngineEventQueue.cpp  ScriptConnection.cpp
src/Minesweeper/: MinesweeperApp.cpp  Tile.cpp
(+198 files in other folders)
